# hotel_price_watch

./: .gitignore  AGENTS.md  GIT_COMMIT_RULES.md  README.md  hotel_price_watch_review.md  pyproject.toml
docs/: ARCHITECTURE_PLAN.md  HANDOFF_PLAN.md  TASK_BREAKDOWN.md  UI_REDESIGN_PLAN.md  V1_SPEC.md
fixtures/ikyu/: README.md  available_basic.html  available_basic.json  available_changed_date.html  available_changed_date.json  format_variation_basic.html  format_variation_basic.json  sold_out_basic.html  sold_out_basic.json  target_missing_basic.html  target_missing_basic.json
scripts/: uv.ps1
src/: __init__.py
src/app/: __init__.py  main.py
src/app/application/: app_settings.py  chrome_tab_preview.py  debug_captures.py  notification_channel_test.py  preview_guard.py  watch_creation_cache.py  watch_creation_snapshot.py  watch_editor.py  watch_lifecycle.py  watch_tab_matching.py
src/app/bootstrap/: __init__.py  container.py  (+1 more)
tests/: conftest.py
tests/integration/: test_sqlite_repositories.py
tests/unit/: test_app_settings.py  test_chrome_cdp_fetcher.py  test_dev_start.py  test_monitor_policies.py  test_monitor_runtime.py  test_monitor_scheduler.py  test_notification_channel_test.py  test_notification_dispatcher.py  test_notification_engine.py  test_notification_rules.py  test_notifier_formatters.py  test_notifier_transports.py  test_pricing.py  test_single_instance.py  test_site_registry.py  test_view_formatters.py  test_watch_creation_cache.py  test_watch_lifecycle.py  test_watch_lifecycle_state_machine.py  test_watch_runtime_state.py  test_watch_target.py  test_web_app.py
(+189 files in other folders)
