[project]
name = "hotel-price-watch"
version = "0.1.0"
description = "Local ikyu hotel price watcher"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0,<1.0.0",
    "playwright>=1.54.0,<2.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.11.0,<3.0.0",
    "uvicorn>=0.37.0,<0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<0.29.0",
    "pytest>=8.4.0,<9.0.0",
    "ruff>=0.13.0,<0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp_active -p no:cacheprovider"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
